# LD45-WorkingTitle

./: .gitattributes  .gitignore  .travis.yml  CROSS-COMPILE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  WorkingTitle.desktop  tiled-export-script.py  vimrc
maps/: LEVEL.tmx  dev.tmx  grass.tsx  level.tmx  level_absurd.tmx  level_easy.tmx  level_hard.tmx  level_new.tmx  level_normal.tmx  level_very_easy.tmx  level_zen.tmx  megasheet.tsx  plants.tsx  shroomsheet.tsx  solids_concept.tsx
resources/animations/: dyn_animation_example.ron  dyn_grass.ron  dyn_purplebg1.ron  dyn_purplefg1.ron  dyn_purplegrass1.ron  dyn_redbg1.ron  dyn_redbg2.ron  dyn_redfg1.ron  dyn_redgrass1.ron  dyn_redgrass2.ron  dynamic_animation_example.ron  dynamic_red_plant.ron  enemy_flying.ron  enemy_ground.ron  player.ron
resources/config/: bindings.ron  display.ron  frame_limiter.ron  ingame_bindings.ron  menu_bindings.ron  settings.ron
resources/levels/: LEVEL.json  level.json  level_absurd.json  level_easy.json  level_hard.json  level_normal.json  level_very_easy.json  level_zen.json  megasheet.tsx
resources/spritesheets/: dev_plants1.ron  dev_solid1.ron  enemy_flying.ron  enemy_ground.ron  grass.ron  megasheet.ron  plants.ron  plantshit.aseprite  player.ron  shroomsheet.ron
resources/spritesheets/bg/: background_example.ron  bg.xcf  (+3 more)
resources/ui/: _back.ron  _completion_text.ron  _quit.ron  difficulty_select.ron  paused.ron  timer_display.ron  win.ron
src/: audio.rs  helpers.rs  input.rs  level_loader.rs  main.rs  meta.rs  panic_hook.rs  savefile_data.rs  settings.rs  solid_tag.rs
src/components/: background.rs  can_dash.rs  can_hover.rs  can_jump.rs  can_run.rs  can_wall_jump.rs  checkpoint.rs  dynamic_animation.rs  enemy.rs  enemy_ai.rs  feature.rs  follow.rs  goal.rs  has_animated_sprite.rs  has_single_sprite.rs  indicator.rs  loader.rs  menu_selector.rs  mod.rs  player.rs  spike.rs  tile.rs  timer_display.rs
src/input/: ingame_bindings.rs  menu_bindings.rs  mod.rs
src/level_loader/: build_backgrounds.rs  build_camera.rs  build_checkpoints.rs  build_enemies.rs  build_features.rs  build_goal.rs  build_indicators.rs  build_player.rs  build_tiles.rs  helpers.rs  mod.rs
src/level_manager/: level.rs  mod.rs
src/resources/: best_time.rs  checkpoint.rs  mod.rs  player_deaths.rs  reset_level.rs  savefile_data.rs  should_display_timer.rs  should_print_time.rs  should_save.rs  stop_audio.rs  timer.rs  to_main_menu.rs  win_game.rs  win_level.rs
src/savefile_data/: mod.rs  v1_2.rs
src/settings/: camera.rs  debug.rs  enemies.rs  level_manager.rs  misc.rs  mod.rs  music.rs  player.rs  savefile.rs  timer.rs
src/states/: difficulty_select.rs  ingame.rs  level_load.rs  mod.rs  paused.rs  startup.rs  win.rs
src/systems/: background.rs  camera.rs  checkpoint.rs  control_player.rs  death_floor.rs  debug.rs  dynamic_animation.rs  enemy_ai.rs  feature.rs  follow.rs  goal.rs  handle_solid_collisions.rs  helpers.rs  kill_enemy.rs  loading.rs  menu_selection.rs  mod.rs  move_player.rs  player_run.rs  spike.rs  timer.rs
(+20 files in other folders)
