[package]
name = "ld45-working-title"
version = "1.0.1"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[dependencies]
amethyst   = { version = "0.13.2", features = ["vulkan"] }
deathframe = "0.4.0"
serde      = "1.0.101"
ron        = "0.5.1"
json       = "0.12.0"
bitflags   = "=1.0.4"  # https://github.com/rust-lang/rust/issues/59134#issuecomment-489430178

[features]
nightly = ["amethyst/nightly"]

[profile.dev]
opt-level        = 2
debug            = true
lto              = false
debug-assertions = true
codegen-units    = 16
incremental      = true
overflow-checks  = true

[profile.release]
opt-level        = 3
debug            = false
lto              = false
debug-assertions = false
codegen-units    = 1
incremental      = true
overflow-checks  = false
