[package]
name = "ld45-working-title"
version = "1.2.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[dependencies]
serde      = "1.0.101"
serde_json = "1.0.41"
ron        = "0.5.1"
json       = "0.12.0"
bitflags   = "=1.0.4"  # https://github.com/rust-lang/rust/issues/59134#issuecomment-489430178

[dependencies.amethyst]
version = "0.13.2"
features = ["vulkan"]

[dependencies.deathframe]
version = "0.5.1"

[dependencies.climer]
version  = "0.4.0"
features = ["serialize"]

[features]
nightly = ["amethyst/nightly"]

[profile.dev]
opt-level        = 2
debug            = true
lto              = false
debug-assertions = true
codegen-units    = 16
incremental      = true
overflow-checks  = true

[profile.release]
opt-level        = 3
debug            = false
lto              = false
debug-assertions = false
codegen-units    = 16
incremental      = true
overflow-checks  = false
