[package]
name        = "ld45-working-title"
version     = "1.3.0-pre.2"
authors     = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition     = "2018"
description = "Our Ludum Dare 45 jam entry!"
homepage    = "https://noahro.itch.io/working-title"
repository  = "https://github.com/Noah2610/LD45-WorkingTitle"
readme      = "README.md"
license     = "MIT"

[dependencies]
bitflags    = "=1.0.4"  # https://github.com/rust-lang/rust/issues/59134#issuecomment-489430178
dirs        = "2.0.2"
json        = "0.12.0"
ron         = "0.5.1"
serde       = "1.0.101"
serde_json  = "1.0.41"
serde_plain = "0.3.0"

[dependencies.amethyst]
version = "0.13.2"
features = ["vulkan"]

[dependencies.deathframe]
version = "0.5.1"

[dependencies.climer]
version  = "0.4.0"
features = ["serialize"]

[features]
nightly = ["amethyst/nightly"]

[profile.dev]
opt-level        = 2
debug            = true
lto              = false
debug-assertions = true
codegen-units    = 16
incremental      = true
overflow-checks  = true

[profile.release]
opt-level        = 3
debug            = false
lto              = false
debug-assertions = false
codegen-units    = 16
incremental      = true
overflow-checks  = false
